		Better console error reporting when files are copied.
		Removed nonsense error message when stopped on a signal.
		The html file indexes now have better translation from ANSI
		to low ascii and html codes.
		The import function didn't import files starting with the
		letter 't'.
		When a virus scanner is started, de mbtask connection timeout
		is set to one hour.

	mball:
		Will not crash anymore when it needs more then 10 minutes to
		create the allfiles and newfiles lists.
		Removed nonsense error message when stopped on a signal.

	mbaff:
		The High-ascii table to translate to lowercase has now the
		right values to translate the ansi graphics.
		Now uses the template newfiles and filefind to create the 
		reports.
		Removed nonsense error message when stopped on a signal.

	mbdiff:
		Removed nonsense error message when stopped on a signal.
		Improved error reporting when copy fails.

	mbindex:
		Removed nonsense error message when stopped on a signal.

	mbtask:
		Removed some debug logging.
		Creates the semafore is_inet when the internet connections is
		available, and removes it when it is down.
		Added test for ISDN/modem lines in use. If a line status 
		change lasted 5 seconds or longer, the oubound will be
		rescanned.
		Lots of code cleanup.
		No setup setting anymore for maximum POTS and ISDN lines, this
		is now automatic.
		mbtask will now update internal counters how many ISDN and POTS
		lines are free to use for dialout.
		For ISDN and POTS calls, mbtask now decides which tty to use,
		mbcico gets the tty to use as option on the commandline.
		Keeps track of the number of mailers running.
		Added default path for arealists.
		Keeps track of total mailer TCP/IP sessions and will not start
		new sessions if the limit from the setup is reached. This will
		hopefully prevent that mbcico will use too much bandwidth on
		TCP/IP trafic.
		Splitted no TCP settings in no IBN, no IFC and no ITN.