@@ -3,7 +3,7 @@
 #ifndef	_VIRSCAN_H
 #define	_VIRSCAN_H
 
-int VirScan(void);
+int VirScan(char *);
 
 #endif
 
