@@ -4797,6 +4797,8 @@ v0.33.20        10-Feb-2002
 		letter 't'.
 		When a virus scanner is started, de mbtask connection timeout
 		is set to one hour.
+		The virus scanner was sometimes not executed in the right 
+		directory with the adopt and import functions.
 
 	mball:
 		Will not crash anymore when it needs more then 10 minutes to
